# Vlite

./: .gitignore  CMakeLists.txt  main.cpp
examples/: basic_decode.cpp
include/: videofun.h
include/vlite-core/: frame.h  pipeline.h  sampler.hpp  transform.hpp  types.hpp  video.h  video.hpp
include/vlite-ml/: tensor.h
include/vlite-sampling/: random.h  sampler.h  temporal.h  uniform.h
src/: videofun.cpp
src/vlite-core/: pipeline.cpp  video.cpp  video_loader.cpp
src/vlite-sampling/: uniform.cpp
